Fix catalog layout issue

--- a/app/styles/base/_helpers.scss
+++ b/app/styles/base/_helpers.scss
@@ -132,6 +132,9 @@
   display: block !important;
 }
 
+.flex {
+  display:flex;
+}
 
 .inline-block {
   display: inline-block !important;
